# mcp-jina-ai

./: .gitignore  Dockerfile  LICENSE  README.md  jina-docs.md  package-lock.json  package.json  pyproject.toml
src/: client.ts  index.ts  server.ts  tools.ts
src/jina_ai_mcp_server/: client.py  main.py  server.py
src/jina_ai_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jina_ai_mcp_server/tools/: classifier_image.py  classifier_text.py  deepsearch.py  embeddings.py  reader.py  reranker.py  search.py  segmenter.py
